fix #85 unreadable links in dark theme help
run deltas on codemirror with an empty current state
this allows us to render an help message at startup as an annotation

--- a/client/src/main/assets/public/_app.less
+++ b/client/src/main/assets/public/_app.less
@@ -43,11 +43,12 @@ body.pc kbd.mac { display: none }
   }
 }
 
-.help-modal {
+.help-close {
   position: absolute;
   z-index: 10;
   padding: 40px;
   margin: 10px;
+  right: 0;
 
   .not-again {
     display: inline-block;
