--- a/client/src/main/assets/public/_libraries.less
+++ b/client/src/main/assets/public/_libraries.less
@@ -4,10 +4,6 @@
 
   padding-left: 0;
 
-  .p1, .p2 {
-    margin: 10px;
-  }
-
   fieldset {
     margin: 10px;
   }
